production/prometheus-jiva/prometheus-jiva-backend.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: prometheus-jiva-backend
  namespace: prometheus-jiva
spec:
  selector:
    matchLabels:
      app: prometheus-jiva-backend
  template:
    metadata:
      labels:
        app: prometheus-jiva-backend
    spec:
      serviceAccountName: prometheus-jiva-operator
      containers:
      - name: prometheus-jiva-backend-container
        ports:
        - containerPort: 3000
        args:
        - "openebs"
        - "maya-apiserver-service.openebs"
        image: inyee/prometheus-jiva-backend:master-01761a3
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  namespace: prometheus-jiva
  labels:
    app: prometheus-jiva-backend
  name: prometheus-jiva-backend-service
spec:
  type: NodePort
  ports:
  - name: prometheus-jiva-backend
    port: 3000
    protocol: TCP
  selector:
    app: prometheus-jiva-backend
