production/prometheus-jiva/prometheus-jiva-client.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: prometheus-jiva-client
  namespace: prometheus-jiva
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app : prometheus-jiva-client
    spec:
      containers:
        - name: prometheus-jiva-client-container
          image: inyee/prometheus-jiva-dashboard:7c9243
          imagePullPolicy: Always
          ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prometheus-jiva-client
  name: prometheus-jiva-client-service
  namespace: prometheus-jiva
spec:
  type: NodePort
  ports:
  - name: prometheus-jiva-client
    port: 80
    protocol: TCP
  selector:
    app: prometheus-jiva-client
