production/prometheus-jiva/ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: prometheus-jiva-ingress
 namespace: prometheus-jiva
 annotations:
  nginx.ingress.kubernetes.io/rewrite-target: /
  kubernetes.io/tls-acme: "true"
  kubernetes.io/ingress.class: "nginx"
spec:
 tls:
 - hosts:
   - prometheusjiva.openebs.ci
   secretName: prometheus-jiva-ingress
 rules:
 - host: prometheusjiva.openebs.ci
   http:
     paths:
     - path: /
       backend:
         serviceName: prometheus-jiva-service
         servicePort: 32517
